Mas correcciones pequeñas en responsive

--- a/stylesheet/media.css
+++ b/stylesheet/media.css
@@ -1,14 +1,23 @@
 /*      Movil       */
 @media screen and (max-width: 480px) {
   .main {
-    height: 100vh;
     width: 100vw;
+    height: 95vh;
   }
 
   .b-encriptar,
   .b-desencriptar,
   .b-copiar {
     width: 100%;
+  }
+
+  .contenedor-izq p {
+    padding-top: 10px;
+    font-size: 1.4em;
+  }
+
+  .input-text::placeholder {
+    font-size: 0.7em;
   }
 
   .contenedor-der {
@@ -18,6 +27,12 @@
 
   footer {
     text-align: center;
+    height: 5vh;
+  }
+
+  footer span {
+    font-size: 1.1em;
+    font-weight: 500;
   }
 }
 
